fix style on mobile

--- a/src/ColorPicker.css
+++ b/src/ColorPicker.css
@@ -9,7 +9,3 @@
   margin-block-start: 1.75rem;
   padding-block-start: 1rem;
 }
-
-.color-input {
-  width: 50%;
-}
