--- a/src/Slider.css
+++ b/src/Slider.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   margin-block-end: 1.25rem;
+
+  @media (max-width: 900px) {
+    margin-block-end: 1.5rem;
+  }
 }
 
 .slider-input {
@@ -44,6 +48,11 @@
     height: 1.2rem;
     transform: translateY(-40%);
     width: 1.2rem;
+
+    @media (max-width: 900px) {
+      height: 2rem;
+      width: 2rem;
+    }
   }
 
   &::-moz-range-thumb {
@@ -54,6 +63,11 @@
     box-shadow: 0 1px 1px var(--shadow-color);
     height: 1.2rem;
     width: 1.2rem;
+
+    @media (max-width: 900px) {
+      height: 2rem;
+      width: 2rem;
+    }
   }
 
   &:focus {
@@ -68,6 +82,10 @@
   justify-content: space-between;
   margin-block-end: 0.75rem;
   width: 100%;
+
+  @media (max-width: 900px) {
+    margin-block-end: 1rem;
+  }
 }
 
 .label-value {
