--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
   place-items: center;
 
   @media (max-width: 900px) {
-    padding: 1rem;
+    padding: 0.5rem;
   }
 }
 
@@ -58,7 +58,7 @@ body {
   @media (max-width: 900px) {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    height: 95dvh;
-    width: 90dvw;
+    height: calc(100dvh - 1rem);
+    width: calc(100dvw - 1rem);
   }
 }
